Updated with java 1.4 friendly usage of Integer